--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Random blogging by Bing
 email: bingbingmei@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This is the place where you can start to know me more...  :bowtie:  `:bowtie:`<br>
+  This is the place where you can start to know me more...
 baseurl: "/blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
